# cloudtools

./: CMakeLists.txt  README.md  package.xml
cmake/: FindANN.cmake
docker/: compile.sh  pcd_skeleton.sh  run.sh
docker/keras/: Dockerfile
docker/keras-with-ros/: .symrc  Dockerfile  user_entrypoint.sh
models/: Figure10_Plane.ply  Figure11_Lamp.ply  Figure12_Dinosaur_dense.ply  Figure12_Dinosaur_sparse.ply  Figure13_Coral.ply  Figure14_LimitTree.ply  Figure15_Yoga1.ply  Figure15_Yoga2.ply  Figure15_Yoga3.ply  Figure15_Yoga4.ply  Figure15_Yoga5.ply  Figure15_Yoga6.ply  Figure17_GLady.ply  Figure1_Deer.ply  Figure2_Couple.ply  Figure4_2D_S.ply  Figure5_Mimosa.ply  Figure6_2D_Leaf.ply  Figure7_Density.ply  Figure8_Indian_Lady.ply  Figure9_Basket.ply
src/: CMesh.h  DataMgr.cpp  DataMgr.h  GlobalFunction.cpp  GlobalFunction.h  Parameter.cpp  ParameterMgr.cpp  process_pcd.cpp
src/Algorithm/: Skeleton.cpp  Skeleton.h  Skeletonization.cpp  Skeletonization.h
src/msvc/: Point Cloud.vcxproj
